Bug 743090: add ability to toggle wrapping of quoted text

--- a/extensions/BMO/web/styles/edit_bug.css
+++ b/extensions/BMO/web/styles/edit_bug.css
@@ -31,3 +31,8 @@
 .bz_hidden {
     display: none;
 }
+
+.bz_collapse_comment {
+    font-family: monospace;
+}
+
